Fixed Footer and body overlapping while opening mobile menu issue

--- a/Day 8/portfolio/wwwroot/css/site.css
+++ b/Day 8/portfolio/wwwroot/css/site.css
@@ -30,6 +30,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+main {
+    min-height: 500px;
+}
+
 .logo {
     font-weight: 500;
 }
